# personas-profiles-redux

./: .gitignore  .travis.yml  CHANGELOG-UNRELEASED.md  CHANGELOG.md  README.md  conductor-config.toml  config.nix  container-config.toml  docker-compose.yml  holo_tester.key  iframe.html  index.html  package.json  vault.dot
dna/: dna.json
dna-src/holo-vault/test/: index.js
dna-src/holo-vault/test/agent/: personas.js  persons.js  profiles.js
dna-src/holo-vault/zomes/personas/code/: Cargo.toml
dna-src/holo-vault/zomes/profiles/code/: Cargo.toml
dna-src/holo-vault/zomes/profiles/code/src/: lib.rs  utils.rs
dna-src/holo-vault/zomes/profiles/code/src/profile/: handlers.rs  mod.rs
dna-src/test/: index.js  package.json
dna-src/test/agent/: personas.js  profiles.js
dna-src/utils/: Cargo.toml
dna-src/utils/src/: lib.rs
dna-src/zomes/personas/code/: Cargo.toml
dna-src/zomes/personas/code/src/: lib.rs  utils.rs
dna-src/zomes/personas/code/src/persona/: handlers.rs  mod.rs
dna-src/zomes/profiles/code/: Cargo.toml
dna-src/zomes/profiles/code/src/: lib.rs  utils.rs
dna-src/zomes/profiles/code/src/profile/: handlers.rs  mod.rs
dna/personas/: personas.js
dna/profiles/: profile.json  profileMapping.json  profileSpec.json  profiles.js
static/: manager.6a81797ae22d4c89dbcd.bundle.js  preview.643a2a9d45dae6afbd22.bundle.js
test/: personas.json
ui-automation/: package-lock.json  package.json
ui-automation/cypress/integration/: example_spec.js  persona.js  profiles.js
ui-src/: package-lock.json  package.json
ui-src/.storybook/: config.js  welcomeStory.js
ui-src/src/: actions.js  root.js  root.tsx  store.js  store.ts  withRoot.js  withRoot.tsx
ui-src/src/_welcome/: welcome.stories.tsx
ui-src/src/actions/: index.js
ui-src/src/cells/cells/: actions.js  constants.js  reducer.js
ui-src/src/cells/cells/containers/: cellsContainer.js
ui-src/src/cells/holo-chat/: constants.js  reducer.js
ui-src/src/cells/holo-chat/containers/: setupContainer.js
ui-src/src/cells/holo-vault/: actions.js  constants.js  reducer.js
ui-src/src/components/: noPersonas.md  profile.js  profile.story.js  profileField.js  threePersonas.md
ui-src/src/components/persona/: newPersona.md  persona.js  persona.story.js
ui-src/src/components/profile/: profile.js  profile.story.js  profileField.js
ui-src/src/containers/: profileContainer.js
ui-src/src/hApps/holo-vault/: actions.test.ts  actions.ts  reducer.test.ts
ui-src/src/hApps/holo-vault/containers/: loginContainer.ts  (+2 more)
ui-src/src/reducers/: index.js
ui-src/src/skins/: home.jsx  nav.js  nav.jsx
ui-src/src/utils/: holochainAxiosActions.ts
(+37 files in other folders)
