[package]
  name = "personas"
  version = "0.0.1"
  authors = ["willem <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
  edition = "2018"
[dependencies]
  serde = "=1.0.89"
  serde_json = { version = "=1.0.39", features = ["preserve_order"] }
  serde_derive = "=1.0.89"
  boolinator = "=2.4.0"
  juniper = "0.11.1"
  derive_more = "0.9.0"

  # hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.18-alpha1" }
  # holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.18-alpha1" }
  # holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.18-alpha1" }

  hdk = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/hdk-rust" }
  holochain_wasm_utils = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/wasm_utils" }
  holochain_core_types_derive = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/core_types_derive" }

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
