[package]
  name = "profiles"
  version = "0.1.0"
  authors = ["willem <willemolding@gmail.com>"]
  edition = "2018"
[dependencies]
  serde = "1.0"
  serde_json = "1.0"
  serde_derive = "1.0"
  hdk = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/hdk-rust" }
  holochain_wasm_utils = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/wasm_utils" }
  holochain_core_types_derive = { path = "/Users/philipbeadle/holochain/Holochain/holochain-rust/core_types_derive" }

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
